fixed nav collapse when overflow

--- a/source/_partial/header.styl
+++ b/source/_partial/header.styl
@@ -15,6 +15,10 @@ header
   display: flex
   list-style: none
   flex-grow: 1
+  overflow: scroll
+
+.nav::-webkit-scrollbar
+  display: none
 
 .nav-child
   font-size: 1.5rem
@@ -26,6 +30,7 @@ header
   color: var(--fontColor)
   text-decoration: none
   transition: color 0.5s
+  white-space:nowrap
 .nav-child a:visited
   color: var(--fontColor)
 .nav-child a:hover
@@ -42,3 +47,4 @@ header
   cursor: pointer
   overflow: hidden
   border-radius: 999px
+  margin-left: 1rem
